@@ -1,9 +1,9 @@
 #include "system.h"
 #include "xar.h"
 
-#include <rpmio.h>
-
 #define	_RPMXAR_INTERNAL
+#include <rpmio_internal.h>
+
 #include <rpmxar.h>
 
 #include "debug.h"
@@ -61,6 +61,9 @@ rpmxar rpmxarFree(rpmxar xar)
 	    xar->x = NULL;
 	}
 
+	xar->member = _free(xar->member);
+	xar->b = _free(xar->b);
+
 	(void) rpmxarUnlink(xar, "rpmxarFree");
 /*@=onlytrans@*/
 	/*@-refcounttrans -usereleased@*/
@@ -102,11 +105,11 @@ fprintf(stderr, "*** rpmxarNext(%p) first %d\n", xar, xar->first);
     return (xar->f == NULL ? 1 : 0);
 }
 
-int rpmxarPush(rpmxar xar, const char * fn, void * b, size_t nb)
+int rpmxarPush(rpmxar xar, const char * fn)
 {
-    if (xar->x && b != NULL && nb > 0) {
+    if (xar->x && xar->b != NULL) {
 /*@-moduncon@*/
-	xar->f = xar_add_frombuffer(xar->x, NULL, fn, b, nb);
+	xar->f = xar_add_frombuffer(xar->x, NULL, fn, xar->b, xar->bsize);
 /*@=moduncon@*/
 	if (xar->f == NULL)
 	    return 2;
@@ -114,34 +117,80 @@ int rpmxarPush(rpmxar xar, const char * fn, void * b, size_t nb)
     return 0;
 }
 
-int rpmxarPull(rpmxar xar, const char * fn, void * bp, size_t * nbp)
+int rpmxarPull(rpmxar xar, const char * fn)
 {
 /*@-moduncon@*/
     const char * path = xar_get_path(xar->f);
 /*@=moduncon@*/
-    char * b = NULL;
-    size_t nb = 0;
     int rc;
 
     if (fn != NULL && strcmp(fn, path)) {
 	path = _free(path);
 	return 1;
     }
+    xar->member = _free(xar->member);
+    xar->member = path;
+
+    xar->b = _free(xar->b);
+    xar->bsize = xar->bx = 0;
 
 /*@-moduncon@*/
-    rc = (int) xar_extract_tobuffersz(xar->x, xar->f, &b, &nb);
+    rc = (int) xar_extract_tobuffersz(xar->x, xar->f, &xar->b, &xar->bsize);
 /*@=moduncon@*/
 if (_xar_debug)
-fprintf(stderr, "*** %s %p[%lu] rc %d\n", path, b, (unsigned long)nb, rc);
-    path = _free(path);
-    if (rc || b == NULL || nb == 0)
+fprintf(stderr, "*** %s %p[%lu] rc %d\n", xar->member, xar->b, (unsigned long)xar->bsize, rc);
+    if (rc)
 	return 1;
 
-    if (bp)
-	*((char **)bp) = b;
-    if (nbp)
-	*nbp = nb;
-
     return 0;
+}
+
+int rpmxarSwapBuf(rpmxar xar, char * b, size_t bsize,
+		char ** obp, size_t * obsizep)
+{
+if (_xar_debug)
+fprintf(stderr, "*** rpmxarSwapBuf(%p, %p[%u], %p, %p) %p[%u]\n", xar, b, (unsigned) bsize, obp, obsizep, xar->b, (unsigned) xar->bsize);
+    if (xar) {
+	if (obsizep != NULL)
+	    *obsizep = xar->bsize;
+	if (obp != NULL) {
+	    *obp = xar->b;
+	    xar->b = NULL;
+	}
+	xar->b = _free(xar->b);
+	xar->b = b;
+	xar->bsize = bsize;
+    }
+    return 0;
+}
+
+ssize_t xarRead(void * cookie, /*@out@*/ char * buf, size_t count)
+{
+    FD_t fd = cookie;
+    rpmxar xar = fdGetXAR(fd);
+    ssize_t rc = 0;
+
+assert(xar != NULL);
+#if 0
+    if ((xx = rpmxarNext(xar)) != 0)    return RPMRC_FAIL;
+    if ((xx = rpmxarPull(xar, "Signature")) != 0) return RPMRC_FAIL;
+    (void) rpmxarSwapBuf(xar, NULL, 0, &b, &nb);
+#endif
+
+    rc = xar->bsize - xar->bx;
+    if (rc > 0) {
+	if (count < rc) rc = count;
+	memmove(buf, &xar->b[xar->bx], rc);
+	xar->bx += rc;
+    } else
+    if (rc < 0) {
+	rc = -1;
+    } else
+	rc = 0;
+
+if (_xar_debug)
+fprintf(stderr, "*** xarRead(%p,%p,0x%x) %s %p[%u:%u] rc 0x%x\n", cookie, buf, (unsigned)count, xar->member, xar->b, (unsigned)xar->bx, (unsigned)xar->bsize, (unsigned)rc);
+
+    return rc;
 }
 #endif
